textview: fix bug on DnD displaced limits of selection

The fix of commit f2fd655754407103f8fb9b2c3e7586fb595ab917
should be confined to DnD coords only, because otherwise
it causes the start and end of the selection to be displaced.

https://bugzilla.gnome.org/show_bug.cgi?id=785736